--- a/css/style.css
+++ b/css/style.css
@@ -322,6 +322,9 @@ color: #2c3e50;
 .form-control:-ms-input-placeholder {
 color: #2c3e50;
 }
+#email-address {
+	font-size: 20px;
+}
 #contact .btn {
 	margin-top: 20px;
 }
