--- a/css/style.css
+++ b/css/style.css
@@ -39,14 +39,6 @@
     padding: 0 10px;
 }
 
-.navbar-dark .nav-item .internal-page-link {
-    color: rgba(255, 255, 255, 0.8);
-}
-
-.navbar-dark .nav-item .external-page-link {
-    color: rgba(255, 255, 255, 0.6);
-}
-
 .navbar-brand {
     margin-left: 1.25rem;
 }
@@ -59,6 +51,48 @@
 
 .navbar-collapse {
     text-align: center;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    background-color: #000;
+    color: rgba(255, 255, 255, 0.6);
+    min-width: 100px;
+}
+
+.nav-link:hover {
+    background-color: #000;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  display: none;
+  position: absolute;
+  min-width: 100%;
+  left: 0;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content-last {
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
 }
 
 @media (min-width: 768px) {
