--- a/old/css/style.css
+++ b/old/css/style.css
@@ -14,8 +14,11 @@
     width: 100%;
     height: auto;
     padding: 10%;
-    background:
-        linear-gradient(to right, rgba(107, 77, 168, 0.7), rgba(17, 138, 188, 0.7)),
+    background: linear-gradient(
+            to right,
+            rgba(107, 77, 168, 0.7),
+            rgba(17, 138, 188, 0.7)
+        ),
         url(../img/higgins.jpg);
     background-size: cover;
     background-repeat: no-repeat;
@@ -69,24 +72,24 @@ p.navbar-brand {
 
 /* The container <div> - needed to position the dropdown content */
 .dropdown {
-  position: relative;
-  display: inline-block;
+    position: relative;
+    display: inline-block;
 }
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  display: none;
-  position: absolute;
-  min-width: 100%;
-  left: 0;
+    display: none;
+    position: absolute;
+    min-width: 100%;
+    left: 0;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
 }
 
 .dropdown-content-last {
@@ -101,7 +104,7 @@ p.navbar-brand {
 
 @media (min-width: 768px) {
     .navbar-expand-md .navbar-collapse {
-        margin-right: 79px;  /* counter offset from brand logo */
+        margin-right: 79px; /* counter offset from brand logo */
     }
 }
 
@@ -114,14 +117,14 @@ p.navbar-brand {
     color: var(--secondary-color);
 }
 
-.navbar-dark .navbar-nav .active>.nav-link,
+.navbar-dark .navbar-nav .active > .nav-link,
 .navbar-dark .navbar-nav .nav-link.active,
 .navbar-dark .navbar-nav .nav-link.show,
-.navbar-dark .navbar-nav .show>.nav-link {
+.navbar-dark .navbar-nav .show > .nav-link {
     color: var(--primary-color);
 }
 
-.navbar>.container {
+.navbar > .container {
     margin: 0;
 }
 
@@ -180,7 +183,7 @@ p.navbar-brand {
 
 .fa:hover {
     color: #fff;
-    transform:scale(1.3);
+    transform: scale(1.3);
 }
 
 .fa-github {
@@ -206,7 +209,11 @@ p.navbar-brand {
 /* Footer */
 footer {
     text-align: center;
-    background: linear-gradient(to right, var(--secondary-color), var(--primary-color));
+    background: linear-gradient(
+        to right,
+        var(--secondary-color),
+        var(--primary-color)
+    );
     color: #fff;
     padding: 1em;
     font-size: 12px;
@@ -290,8 +297,6 @@ footer a {
     #current-role {
         display: none;
     }
-
-
 }
 
 .experience-section {
@@ -348,7 +353,11 @@ hr {
     text-align: center;
     width: 5em;
     height: 0.2em;
-    background: linear-gradient(to right, var(--secondary-color), var(--primary-color));
+    background: linear-gradient(
+        to right,
+        var(--secondary-color),
+        var(--primary-color)
+    );
     margin-bottom: 25px;
 }
 
