--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -14,9 +14,6 @@
     width: 100%;
     height: auto;
     padding: 10%;
-    background:
-        linear-gradient(to right, rgba(107, 77, 168, 0.7), rgba(17, 138, 188, 0.7)),
-        url(../img/higgins.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -27,9 +24,6 @@
 }
 
 /* Navigation Bar */
-.navbar-header {
-    /*width: 100%;*/
-}
 .navbar-custom {
     background-color: #000;
     padding: 10px 0;
@@ -167,6 +161,11 @@ p.navbar-brand {
     width: 4.4em;
     height: 4.4em;
     margin: 0.5em;
+    padding: 20px;
+    text-align: center;
+    color: #fff;
+    border-radius: 50%;
+    transition-duration: 0.5s;
 }
 
 .social .fa {
@@ -178,28 +177,29 @@ p.navbar-brand {
     border-radius: 50%;
 }
 
-.fa:hover {
+.social-icon-container:hover {
     color: #fff;
     transform:scale(1.3);
+    transition-duration: 0.5s;
 }
 
-.fa-github {
+.github {
     background-color: #25292e;
 }
 
-.fa-linkedin {
+.linkedin {
     background-color: #0077b5;
 }
 
-.fa-facebook {
+.facebook {
     background-color: #3b5998;
 }
 
-.fa-twitter {
+.twitter {
     background-color: #00aced;
 }
 
-.fa-instagram {
+.instagram {
     background-color: #dd2a7b;
 }
 
